<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="passcode">PIN</string>
    <string name="passcode_manage">Manage passcode</string>
    <string name="passcode_set">Passcode set</string>
    <string name="passcode_preference_title">Passcode lock</string>

    <string name="passcodelock_hint"></string>
    <string name="passcodelock_numpad_0">0</string>
    <string name="passcodelock_numpad_1">1</string>
    <string name="passcodelock_numpad_2">2</string>
    <string name="passcodelock_numpad_3">3</string>
    <string name="passcodelock_numpad_4">4</string>
    <string name="passcodelock_numpad_5">5</string>
    <string name="passcodelock_numpad_6">6</string>
    <string name="passcodelock_numpad_7">7</string>
    <string name="passcodelock_numpad_8">8</string>
    <string name="passcodelock_numpad_9">9</string>

    <!-- Preference keys -->
    <string name="pref_key_passcode_toggle">turn_passcode_on_off</string>
    <string name="pref_key_change_passcode">change_passcode</string>

    <!-- Strings for the Settings interface -->
    <string name="app_name">PasscodeLock Sample</string>
    <string name="action_settings">Settings</string>
    <string name="preferences_header_security">Security</string>

    <!-- Strings for customizing the Passcode Lock interface -->
    <string name="cd_passcodelock_logo">PasscodeLock Logo</string>
    <string name="passcode_fingerprint_supported">Fingerprint Supported</string>
    <string name="passcode_change_passcode">Change passcode</string>
    <string name="passcode_enter_old_passcode">Enter old passcode</string>
    <string name="passcode_re_enter_passcode">Enter passcode again</string>
    <string name="passcode_turn_off">Disable lock</string>
    <string name="passcode_turn_on">Enable lock</string>
    <string name="passcode_wrong_passcode">Wrong passcode.</string>
    <string name="passcodelock_prompt_message">Enter passcode</string>
    <string name="action_select">selectMode</string>
    <string name="action_scan">scanModel</string>
    <string name="action_delete">deleteSelected</string>
    <string name="action_select_all">selectAll</string>
    <string name="action_unselect_all">unselect</string>
    <string name="action_export">export</string>
    <string name="action_move">move</string>

</resources>
