<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="设置">

    <androidx.preference.PreferenceCategory
        android:key="security_header"
        android:title="@string/preferences_header_security">

        <!-- A 'parent' preference, which enables/disables child preferences_lock (below)
             when checked/unchecked. -->
        <!--android:layout="@layout/switch_preference" 更改默认布局以设置自定义颜色-->
        <androidx.preference.SwitchPreference
            android:key="@string/pref_key_passcode_toggle"
            android:textColor="@color/passcodelock_field_text_color"
            android:title="@string/passcode_turn_on">
        </androidx.preference.SwitchPreference>

        <!-- Allows the user to change a PIN in the 'Security' category.
             NOTE: This preference will be enabled only when the switch above is checked. -->
        <androidx.preference.Preference
            android:key="@string/pref_key_change_passcode"
            android:textColor="@color/passcodelock_field_text_color"
            android:title="@string/passcode_change_passcode">
        </androidx.preference.Preference>

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
