<!-- Customized keyboard layout -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="top"
    android:background="@color/passcodelock_background"
    >

    <LinearLayout
        android:id="@+id/AppUnlockLinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >

        <ImageView
            android:id="@+id/passcode_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/cd_passcodelock_logo"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/passcode_logo"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/passcodelock_prompt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="1dp"
            android:paddingBottom="16dp"
            android:text="@string/passcodelock_prompt_message"
            android:textAlignment="center"
            android:textColor="@color/passcodelock_prompt_text_color"
            android:textSize="18sp"
            >
        </TextView>

        <EditText
            android:id="@+id/pin_field"
            style="@style/PasscodeEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="38dp"
            android:background="@color/textColorPrimary"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/passcodelock_hint"
            android:inputType="numberPassword"
            android:maxLength="4"
            tools:text="asdf"
            >
        </EditText>

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="30dp"
            android:shrinkColumns="*"
            android:stretchColumns="*"
            >

            <TableRow>

                <Button
                    android:id="@+id/button1"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:text="@string/passcodelock_numpad_1"
                    >
                </Button>

                <Button
                    android:id="@+id/button2"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:text="@string/passcodelock_numpad_2"
                    >
                </Button>

                <Button
                    android:id="@+id/button3"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:text="@string/passcodelock_numpad_3"
                    >
                </Button>

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/button4"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:text="@string/passcodelock_numpad_4"
                    >
                </Button>

                <Button
                    android:id="@+id/button5"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:text="@string/passcodelock_numpad_5"
                    >
                </Button>

                <Button
                    android:id="@+id/button6"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:text="@string/passcodelock_numpad_6"
                    >
                </Button>

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/button7"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:text="@string/passcodelock_numpad_7"
                    >
                </Button>

                <Button
                    android:id="@+id/button8"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:text="@string/passcodelock_numpad_8"
                    >
                </Button>

                <Button
                    android:id="@+id/button9"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:text="@string/passcodelock_numpad_9"
                    >
                </Button>

            </TableRow>

            <TableRow>

                <!--
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                -->
                <Button
                    android:id="@+id/button_none"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:text="*"
                    >
                </Button>

                <Button
                    android:id="@+id/button0"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:text="@string/passcodelock_numpad_0"
                    >
                </Button>

                <ImageButton
                    android:id="@+id/button_erase"
                    style="@style/PasscodeKeyboardButtonStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_backspace_white_36dp"
                    android:tint="@color/textColorPrimary"
                    app:tint="@color/textColorPrimary"
                    />

            </TableRow>

        </TableLayout>

        <ImageView
            android:id="@+id/image_fingerprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/passcodelock_fingerprint_image_margin_top"
            android:contentDescription="@string/passcode_fingerprint_supported"
            android:src="@drawable/ic_fp_40px"
            android:visibility="visible"
            >
        </ImageView>

    </LinearLayout>

</ScrollView>
